ovic, neurips, ncics

--- a/impact.html
+++ b/impact.html
@@ -412,7 +412,7 @@ div.tocify {
 <div id="awards-honours" class="section level3">
 <h3>Awards &amp; Honours</h3>
 <ul>
-<li>Best Reviewer Award (2018), Thirty-second Conference on Neural Information Processing Systems (NeurIPS formerly NIPS)</li>
+<li>Best Reviewer Award (2018,2019), Conference on Neural Information Processing Systems (NeurIPS formerly NIPS)</li>
 <li>WiE Best Postgrad Paper Prize (2017), IEEE Australia Council for PhD student Maryam Fanaeepour’s joint work</li>
 <li>Victorian Young Tall Poppy Science Award (2016), Australian Institute of Policy &amp; Science</li>
 <li>Microsoft Azure ML Award (2015), Microsoft Research</li>
@@ -452,9 +452,9 @@ div.tocify {
 <li>11/2014: Facebook (Menlo Park) talk Data Integration through the Lens of Statistical Learning</li>
 </ul>
 </div>
-<div id="decadal-plan" class="section level3">
-<h3>Decadal plan</h3>
-<p>As member of the Australian Academy of Science’s <a href="https://www.science.org.au/supporting-science/national-committees-science/national-committee-information-and-communication">National Committee for Information and Communication Sciences</a> (2015–2020) contributing to the development of a Decadal plan for ICT.</p>
+<div id="strategic-plan" class="section level3">
+<h3>Strategic plan</h3>
+<p>As member of the Australian Academy of Science’s <a href="https://www.science.org.au/supporting-science/national-committees-science/national-committee-information-and-communication">National Committee for Information and Communication Sciences</a> (2015–2020) contribued towards the development of the <a href="https://www.science.org.au/support/analysis/decadal-plans/ics/preparing-australias-digital-future">Digital Futures strategic plan</a>.</p>
 </div>
 <div id="program-committee-membership" class="section level3">
 <h3>Program committee membership</h3>
