--- a/pubs.html
+++ b/pubs.html
@@ -320,6 +320,23 @@ $(document).ready(function () {
 </ul>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-rubinstein2019data">
+@incollection{rubinstein2019data,
+  title = {Data Security and AI},
+  author = {Benjamin I. P. Rubinstein},
+  booktitle = {Closer to the machine: {T}echnical, social, and legal aspects of {AI}},
+  editor = {Cliff Betram and Asher Gibson and Adriana Nugent},
+  pages = {105--119},
+  year = {2019},
+  publisher = {{Office of the Victorian Information Commissioner}},
+}
+</code></pre></div>
+
+<ul>
+<li>Rubinstein, Benjamin I. P. “Data Security and AI”. In: <em>Closer to the machine: Technical, social, and legal aspects of AI</em>. Ed. by Cliff Betram, Asher Gibson and Adriana Nugent. Office of the Victorian Information Commissioner, 2019, pp. 105-119. [<a href="https://ovic.vic.gov.au/closer-to-the-machine-ai-publication/">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('rubinstein2019data.bib', 'bibtex-rubinstein2019data')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-culnane2019stop">
 @misc{culnane2019stop,
   title = {Stop the Open Data Bus, We Want to Get Off},
