adds d-blink paper, software

--- a/pubs.html
+++ b/pubs.html
@@ -337,6 +337,23 @@ $(document).ready(function () {
 </ul>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-marchant2019dblink">
+@misc{marchant2019dblink,
+  title = {d-blink: Distributed End-to-End Bayesian Entity Resolution},
+  author = {Neil G. Marchant and Rebecca C. Steorts and Andee Kaplan and Benjamin I. P. Rubinstein and Daniel N. Elazar},
+  eprint = {1909.06039},
+  year = {2019},
+  month = {Sep},
+  archiveprefix = {arXiv},
+  primaryclass = {stat.CO},
+}
+</code></pre></div>
+
+<ul>
+<li>Marchant, Neil G., Rebecca C. Steorts, Andee Kaplan, Benjamin I. P. Rubinstein and Daniel N. Elazar. <em>d-blink: Distributed End-to-End Bayesian Entity Resolution</em>. Sep. 2019. arXiv: 1909.06039 [stat.CO]. [<a href="https://arxiv.org/abs/1909.06039">PDF</a>; <a href="https://github.com/ngmarchant/dblink">software</a>; <a style="cursor: pointer;" onclick="DownloadToFile('marchant2019dblink.bib', 'bibtex-marchant2019dblink')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-culnane2019stop">
 @misc{culnane2019stop,
   title = {Stop the Open Data Bus, We Want to Get Off},
