group member changes, funding, reviewing

--- a/pubs.html
+++ b/pubs.html
@@ -237,6 +237,42 @@ $(document).ready(function () {
 <p><br></p>
 <p>See my <a href="https://scholar.google.com.au/citations?user=hMG_gR4AAAAJ&amp;hl=en&amp;oi=ao">Google Scholar profile</a> for bibliometrics, or <a href="http://arxiv.org/a/rubinstein_b_1">arXiv</a> for preprints.</p>
 <div id="section" class="section level3">
+<h3>2020</h3>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-fish2020sampling">
+@inproceedings{fish2020sampling,
+  title = {Sampling Without Compromising Accuracy in Adaptive Data Analysis},
+  author = {Benjamin Fish and Lev Reyzin and Benjamin I. P. Rubinstein},
+  booktitle = {The 31st International Conference on Algorithmic Learning Theory},
+  year = {2020},
+  note = {To appear},
+  series = {ALT},
+}
+</code></pre></div>
+
+<ul>
+<li>Fish, Benjamin, Lev Reyzin and Benjamin I. P. Rubinstein. “Sampling Without Compromising Accuracy in Adaptive Data Analysis”. In: <em>The 31st International Conference on Algorithmic Learning Theory</em>. ALT. To appear. 2020. [<a href="https://arxiv.org/abs/1709.09778">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('fish2020sampling.bib', 'bibtex-fish2020sampling')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-setiawan2020function">
+@inproceedings{setiawan2020function,
+  title = {Function Interpolation for Learned Index Structures},
+  year = {2020},
+  author = {Naufal Fikri Setiawan and Benjamin I. P. Rubinstein and Renata Borovica-Gajic},
+  booktitle = {Proceedings of the Australasian Computer Science Week Multiconference},
+  series = {ACSW},
+  publisher = {ACM},
+  note = {To appear in the 31st Australasian Database Conference},
+}
+</code></pre></div>
+
+<ul>
+<li>Setiawan, Naufal Fikri, Benjamin I. P. Rubinstein and Renata Borovica-Gajic. “Function Interpolation for Learned Index Structures”. In: <em>Proceedings of the Australasian Computer Science Week Multiconference</em>. ACSW. To appear in the 31st Australasian Database Conference. ACM, 2020. [<a style="cursor: pointer;" onclick="DownloadToFile('setiawan2020function.bib', 'bibtex-setiawan2020function')">BibTeX</a>]</li>
+</ul>
+</div>
+<div id="section-1" class="section level3">
 <h3>2019</h3>
 
 <div class="bibox" style="display: none;">
@@ -386,25 +422,8 @@ $(document).ready(function () {
 <ul>
 <li>Oetomo, Bastian, Malinga Perera, Renata Borovica-Gajic and Benjamin I. P. Rubinstein. <em>A Note on Bounding Regret of the C<span class="math inline">\(^2\)</span>UCB Contextual Combinatorial Bandit</em>. Feb. 2019. arXiv: 1902.07500 [cs.LG]. [<a href="https://arxiv.org/pdf/1902.07500">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('oetomo2019a.bib', 'bibtex-oetomo2019a')">BibTeX</a>]</li>
 </ul>
-
-<div class="bibox" style="display: none;">
-<pre><code id="bibtex-fish2019sampling">
-@misc{fish2019sampling,
-  title = {Sampling Without Compromising Accuracy in Adaptive Data Analysis},
-  author = {Benjamin Fish and Lev Reyzin and Benjamin I. P. Rubinstein},
-  eprint = {1709.09778},
-  year = {2019},
-  month = {Jan},
-  archiveprefix = {arXiv},
-  primaryclass = {cs.LG},
-}
-</code></pre></div>
-
-<ul>
-<li>Fish, Benjamin, Lev Reyzin and Benjamin I. P. Rubinstein. <em>Sampling Without Compromising Accuracy in Adaptive Data Analysis</em>. Jan. 2019. arXiv: 1709.09778 [cs.LG]. [<a href="https://arxiv.org/pdf/1709.09778">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('fish2019sampling.bib', 'bibtex-fish2019sampling')">BibTeX</a>]</li>
-</ul>
 </div>
-<div id="section-1" class="section level3">
+<div id="section-2" class="section level3">
 <h3>2018</h3>
 
 <div class="bibox" style="display: none;">
@@ -529,7 +548,7 @@ $(document).ready(function () {
 <li>Han, Yi and Benjamin I. P. Rubinstein. “Adequacy of the Gradient-Descent Method for Classifier Evasion Attacks”. In: <em>AAAI-18 Workshop on Artificial Intelligence for Cyber Security</em>. AICS. Jan. 2018. [<a href="https://arxiv.org/pdf/1704.01704">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('han2018adequacy.bib', 'bibtex-han2018adequacy')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-2" class="section level3">
+<div id="section-3" class="section level3">
 <h3>2017</h3>
 
 <div class="bibox" style="display: none;">
@@ -720,7 +739,7 @@ $(document).ready(function () {
 <li>Verkade, Heather, Jason M. Lodge, Kristine Elliott, Terrence D. Mulhern, Allen A. Espinosa, Simon J. Cropper and Benjamin I. P. Rubinstein. “Exploring misconceptions as a trigger for enhancing student learning”. In: <em>Higher Education Research and Development Society of Australasia</em>. HERDSA. Apr. 2017. [<a href="http://www.herdsa.org.au/system/files/Verkade_et_al_HERDSA2017.pdf">PDF</a>; <a href="http://www.herdsa.org.au/research-and-development-higher-education-vol-40-392">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('verkade2017exploring.bib', 'bibtex-verkade2017exploring')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-3" class="section level3">
+<div id="section-4" class="section level3">
 <h3>2016</h3>
 
 <div class="bibox" style="display: none;">
@@ -882,7 +901,7 @@ $(document).ready(function () {
 <li>He, Jiazhen, Benjamin I. P. Rubinstein, James Bailey, Rui Zhang and Sandra Milligan. <em>TopicResponse: A Marriage of Topic Modelling and Rasch Modelling for Automatic Measurement in MOOCs</em>. 2016. arXiv: 1607.08720 [cs.LG]. [<a href="https://arxiv.org/pdf/1607.08720">PDF</a>; <a href="https://bitbucket.org/jiazhenhe/topicresponse">software</a>; <a style="cursor: pointer;" onclick="DownloadToFile('he2016topicresponse.bib', 'bibtex-he2016topicresponse')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-4" class="section level3">
+<div id="section-5" class="section level3">
 <h3>2015</h3>
 
 <div class="bibox" style="display: none;">
@@ -973,7 +992,7 @@ $(document).ready(function () {
 <li>Fanaeepour, Maryam, Lars Kulik, Egemen Tanin and Benjamin I. P. Rubinstein. “The CASE histogram: Privacy-aware processing of trajectory data using aggregates”. In: <em>GeoInformatica</em> 19.4 (Jul. 2015), pp. 747-798. [<a href="http://link.springer.com/article/10.1007/s10707-015-0228-8">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('fanaeepour2015the.bib', 'bibtex-fanaeepour2015the')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-5" class="section level3">
+<div id="section-6" class="section level3">
 <h3>2014</h3>
 
 <div class="bibox" style="display: none;">
@@ -1029,7 +1048,7 @@ $(document).ready(function () {
 <li>Dimitrakakis, Christos, Aikaterini Mitrokotsa and Benjamin I. P. Rubinstein. “Proceedings of the 7th Workshop on Artificial Intelligence and Security (AISec)”. In: <em>Proceedings of the 2014 ACM Conference on Computer and Communications Security</em>. CCS. ACM Press, 2014, pp. 1-124. [<strong>ERR1</strong>; <a style="cursor: pointer;" onclick="DownloadToFile('dimitrakakis2014proceedings.bib', 'bibtex-dimitrakakis2014proceedings')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-6" class="section level3">
+<div id="section-7" class="section level3">
 <h3>2012</h3>
 
 <div class="bibox" style="display: none;">
@@ -1180,7 +1199,7 @@ $(document).ready(function () {
 <li>Cardenas, Alvaro A., Blaine Nelson and Benjamin I. P. Rubinstein. “Fifth ACM Workshop on Artificial Intelligence and Security (AISec)”. In: <em>Proceedings of the 2012 ACM Conference on Computer and Communications Security</em>. CCS. ACM. Oct. 2012, pp. 1-110. [<a href="http://dx.doi.org/10.1145/2382196.2382327">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('cardenas2012fifth.bib', 'bibtex-cardenas2012fifth')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-7" class="section level3">
+<div id="section-8" class="section level3">
 <h3>2011</h3>
 
 <div class="bibox" style="display: none;">
@@ -1270,7 +1289,7 @@ $(document).ready(function () {
 <li>Cardenas, Alvaro A., Rachel Greenstadt and Benjamin I. P. Rubinstein. “Proceedings of the 4th Workshop on Artificial Intelligence and Security (AISec)”. In: <em>Proceedings of the 2011 ACM Conference on Computer and Communications Security</em>. CCS. ACM Press, Oct. 2011, pp. 1-116. [<strong>ERR1</strong>; <a style="cursor: pointer;" onclick="DownloadToFile('cardenas2011proceedings.bib', 'bibtex-cardenas2011proceedings')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-8" class="section level3">
+<div id="section-9" class="section level3">
 <h3>2010</h3>
 
 <div class="bibox" style="display: none;">
@@ -1337,7 +1356,7 @@ $(document).ready(function () {
 <li>Rubinstein, Benjamin I. P. “Secure Learning and Learning for Security: Research in the Intersection”. PhD dissertation. Department of Electrical Engineering &amp; Computer Sciences, University of California, Berkeley, May. 2010. [<a href="http://www2.eecs.berkeley.edu/Pubs/TechRpts/2010/EECS-2010-71.pdf">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('rubinstein2010secure.bib', 'bibtex-rubinstein2010secure')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-9" class="section level3">
+<div id="section-10" class="section level3">
 <h3>2009</h3>
 
 <div class="bibox" style="display: none;">
@@ -1440,7 +1459,7 @@ $(document).ready(function () {
 <li>Rubinstein, Benjamin I. P. “Shifting in the n-Cube: Online Mistake Bounds and the Sample Compression Conjecture”. MCompSci thesis. Faculty of Engineering, University of Melbourne, 2009. [<a href="http://repository.unimelb.edu.au/10187/5774">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('rubinstein2009bshifting.bib', 'bibtex-rubinstein2009bshifting')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-10" class="section level3">
+<div id="section-11" class="section level3">
 <h3>2008</h3>
 
 <div class="bibox" style="display: none;">
@@ -1524,7 +1543,7 @@ $(document).ready(function () {
 <li>Rubinstein, Benjamin I. P., Blaine Nelson, Ling Huang, Anthony D. Joseph, Shing-hon Lau, Nina Taft and Doug Tygar. <em>Compromising PCA-based anomaly detectors for network-wide traffic</em>. technical report UCB/EECS-2008-73. EECS Department, University of California, Berkeley, 2008. [<a href="http://www2.eecs.berkeley.edu/Pubs/TechRpts/2008/EECS-2008-73.pdf">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('rubinstein2008compromising.bib', 'bibtex-rubinstein2008compromising')">BibTeX</a>]</li>
 </ul>
 </div>
-<div id="section-11" class="section level3">
+<div id="section-12" class="section level3">
 <h3>2007</h3>
 
 <div class="bibox" style="display: none;">
