--- a/group.html
+++ b/group.html
@@ -234,29 +234,30 @@ $(document).ready(function () {
 
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
 <p><br></p>
-<p>I am fortunate to have supervised a brilliant group of researchers</p>
+<p>I am fortunate to supervise a brilliant group of researchers.</p>
 <div id="postdocs" class="section level3">
 <h3>Postdocs</h3>
 <ul>
 <li><a href="https://www.linkedin.com/in/andrew-cullen-67b04746/?originalSubdomain=au">Andrew Cullen</a> (w Alpcan 2019– ). Machine learning for spectrum management in contested environments.</li>
+<li><a href="https://cis.unimelb.edu.au/people/prameesha-weerasinghe">Sandamal Weerasinghe</a> (w Leckie, Erfani, Alpcan 2019– ). Adversarial machine learning.</li>
 <li><a href="https://shuozhou.github.io/">Shuo Zhou</a> (w Tordesillas, Bailey, Bondell 2019– ). Complex networks in materials science, cybersecurity.</li>
 </ul>
 </div>
 <div id="phd-students" class="section level3">
 <h3>PhD students</h3>
 <ul>
+<li><a href="https://scholar.google.co.il/citations?user=en8SzLcAAAAJ&amp;hl=en">Roei Gelbhart</a> (2019– ). Robustness in machine learning.</li>
 <li>Ruihan Zhang (w Tim Miller 2019– ). Explainable AI and machine learning.</li>
-<li><a href="https://ndthan.bitbucket.io/">Duc Than Nguyen</a> (w Toby Murray 2018– ). Probabilistic information flow security.</li>
 <li><a href="http://www.malinga.me/">Malinga Perera</a> (w Renata Borovica-Gajic 2018– ). Self-driving databases.</li>
 <li><a href="https://www.linkedin.com/in/bastian-oetomo-34300856/">Bastian Oetomo</a> (w Renata Borovica-Gajic 2018– ). Self-driving databases.</li>
 <li><a href="https://www.linkedin.com/in/dongge-liu-9a957913a">Dongge Liu</a> (w Toby Murray, Gidon Ernst at LMU Munich 2018– ). Software fuzzing with machine learning.</li>
-<li><a href="https://au.linkedin.com/in/leyla-roohi-b4544a67">Leyla Roohi</a> (w Vanessa Teague 2017– ). Secure storage and private querying for telecommunications metadata.</li>
 <li><a href="https://www.linkedin.com/in/neil-marchant-466678aa/">Neil Marchant</a> (w Beka Steorts at Duke, Aurore Delaigle 2016– ). Record linkage, adaptive importance sampling.</li>
 </ul>
 </div>
 <div id="phd-studentscompleted" class="section level3">
 <h3>PhD students—Completed</h3>
 <ul>
+<li><a href="https://au.linkedin.com/in/leyla-roohi-b4544a67">Leyla Roohi</a> (w Vanessa Teague 2017–19). Secure storage and private querying for telecommunications metadata (submitted)</li>
 <li>Yuan Li (w Trevor Cohn 2015–19). Crowd sourcing, Bayesian optimisation, NLP (completed, passed)</li>
 <li><a href="https://www.researchgate.net/profile/Lingjuan_Lyu">Lingjuan Lyu</a> (w Marimuthu Palaniswami 2016–18). Privacy in distributed sensing → Postdoc at the ANU</li>
 <li><a href="https://sites.google.com/site/safiheidari/">Safiollah Heidari</a> (w Raj Buyya 2015–18). Distributed graph processing → Founder, NeuroPhyte</li>
