--- a/index.html
+++ b/index.html
@@ -235,9 +235,11 @@ $(document).ready(function () {
 <p><link rel="stylesheet" href="styles.css" type="text/css"></p>
 <p><br></p>
 <p><img src="images/Ben1.jpg" style="width:40%; border:12px solid; margin-right: 24px" align="left"></p>
-<p><strong>Benjamin I. P. Rubinstein</strong>, PhD (Berkeley)<br />
-Associate Professor, <em>School of Computing &amp; Information Systems, University of Melbourne</em></p>
-<p>I actively research topics in machine learning, security &amp; privacy, databases such as adversarial learning, differential privacy and record linkage. Prior to joining the University of Melbourne in 2013, I enjoyed four years in the research divisions of Microsoft, Google, Intel and Yahoo! (all in the United States), followed by a short stint at IBM Research Australia. As a full-time Researcher at Microsoft Research, Silicon Valley, I shipped production systems for entity resolution in Bing and the Xbox360; my research has helped identify and plug side-channel attacks against the popular Firefox browser, and deanonymise Victorian myki transport data and an unprecedented Australian Medicare data release, prompting introduction of the Re-identification Offence Bill 2016. Since joining Melbourne in 2013, I have been awarded $4.09m in competitive funding ($1.74m as lead). My work has been recognised through an Australian Research Council DECRA award, and a Young Tall Poppy Science award.</p>
+<strong>Benjamin I. P. Rubinstein</strong>, PhD (Berkeley)<br>
+<p style="font-size:16px">
+Associate Professor, <em>School of Computing &amp; Information Systems</em><br> Associate Dean (Research), <em>Melbourne School of Engineering</em><br> <em>University of Melbourne, Australia</em>
+</p>
+<p>I actively research topics in machine learning, security &amp; privacy, databases such as adversarial learning, differential privacy and record linkage. Prior to joining the University of Melbourne in 2013, I enjoyed four years in the research divisions of Microsoft, Google, Intel and Yahoo! (all in the United States), followed by a short stint at IBM Research Australia. As a full-time Researcher at Microsoft Research, Silicon Valley, I shipped production systems for entity resolution in Bing and the Xbox360; my research has helped identify and plug side-channel attacks against the popular Firefox browser, and deanonymise Victorian myki transport data and an unprecedented Australian Medicare data release, prompting introduction of the Re-identification Offence Bill 2016. Since joining Melbourne in 2013, I have been awarded $4.45m in competitive funding ($1.74m as lead). My work has been recognised through an Australian Research Council DECRA award, and a Young Tall Poppy Science award.</p>
 
 
 
