--- a/group.html
+++ b/group.html
@@ -247,7 +247,7 @@ $(document).ready(function () {
 <h3>PhD students</h3>
 <ul>
 <li><a href="https://scholar.google.co.il/citations?user=en8SzLcAAAAJ&amp;hl=en">Roei Gelbhart</a> (2019– ). Robustness in machine learning.</li>
-<li>Ruihan Zhang (w Tim Miller 2019– ). Explainable AI and machine learning.</li>
+<li>Ruihan Zhang (w Tim Miller, Kris Ehinger 2019– ). Explainable AI and machine learning.</li>
 <li><a href="http://www.malinga.me/">Malinga Perera</a> (w Renata Borovica-Gajic 2018– ). Self-driving databases.</li>
 <li><a href="https://www.linkedin.com/in/bastian-oetomo-34300856/">Bastian Oetomo</a> (w Renata Borovica-Gajic 2018– ). Self-driving databases.</li>
 <li><a href="https://www.linkedin.com/in/dongge-liu-9a957913a">Dongge Liu</a> (w Toby Murray, Gidon Ernst at LMU Munich 2018– ). Software fuzzing with machine learning.</li>
