--- a/pubs.html
+++ b/pubs.html
@@ -264,12 +264,12 @@ $(document).ready(function () {
   booktitle = {Proceedings of the Australasian Computer Science Week Multiconference},
   series = {ACSW},
   publisher = {ACM},
-  note = {To appear in the 31st Australasian Database Conference},
+  note = {In the 31st Australasian Database Conference},
 }
 </code></pre></div>
 
 <ul>
-<li>Setiawan, Naufal Fikri, Benjamin I. P. Rubinstein and Renata Borovica-Gajic. “Function Interpolation for Learned Index Structures”. In: <em>Proceedings of the Australasian Computer Science Week Multiconference</em>. ACSW. To appear in the 31st Australasian Database Conference. ACM, 2020. [<a style="cursor: pointer;" onclick="DownloadToFile('setiawan2020function.bib', 'bibtex-setiawan2020function')">BibTeX</a>]</li>
+<li>Setiawan, Naufal Fikri, Benjamin I. P. Rubinstein and Renata Borovica-Gajic. “Function Interpolation for Learned Index Structures”. In: <em>Proceedings of the Australasian Computer Science Week Multiconference</em>. ACSW. In the 31st Australasian Database Conference. ACM, 2020. [<a href="https://link.springer.com/book/10.1007/978-3-030-39469-1">publisher link</a>; <span style="color:red">Best Student Paper Honorable Mention</span>; <a style="cursor: pointer;" onclick="DownloadToFile('setiawan2020function.bib', 'bibtex-setiawan2020function')">BibTeX</a>]</li>
 </ul>
 </div>
 <div id="section-1" class="section level3">
