--- a/pubs.html
+++ b/pubs.html
@@ -244,15 +244,16 @@ $(document).ready(function () {
 @inproceedings{fish2020sampling,
   title = {Sampling Without Compromising Accuracy in Adaptive Data Analysis},
   author = {Benjamin Fish and Lev Reyzin and Benjamin I. P. Rubinstein},
-  booktitle = {The 31st International Conference on Algorithmic Learning Theory},
+  booktitle = {Proceedings of the 31st International Conference on Algorithmic Learning Theory},
   year = {2020},
-  note = {To appear},
   series = {ALT},
+  organization = {PMLR},
+  pages = {297--318},
 }
 </code></pre></div>
 
 <ul>
-<li>Fish, Benjamin, Lev Reyzin and Benjamin I. P. Rubinstein. “Sampling Without Compromising Accuracy in Adaptive Data Analysis”. In: <em>The 31st International Conference on Algorithmic Learning Theory</em>. ALT. To appear. 2020. [<a href="https://arxiv.org/abs/1709.09778">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('fish2020sampling.bib', 'bibtex-fish2020sampling')">BibTeX</a>]</li>
+<li>Fish, Benjamin, Lev Reyzin and Benjamin I. P. Rubinstein. “Sampling Without Compromising Accuracy in Adaptive Data Analysis”. In: <em>Proceedings of the 31st International Conference on Algorithmic Learning Theory</em>. ALT. PMLR. 2020, pp. 297-318. [<a href="http://proceedings.mlr.press/v117/fish20a/fish20a.pdf">PDF</a>; <a href="http://proceedings.mlr.press/v117/fish20a.html">publisher link</a>; <a href="https://arxiv.org/abs/1709.09778">full</a>; <a style="cursor: pointer;" onclick="DownloadToFile('fish2020sampling.bib', 'bibtex-fish2020sampling')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
