--- a/pubs.html
+++ b/pubs.html
@@ -257,6 +257,21 @@ $(document).ready(function () {
 </ul>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-Zhou2020early">
+@article{Zhou2020early,
+  title = {Early identification of an impending rockslide location via a spatially-aided Gaussian mixture model},
+  year = {2020},
+  author = {Shuo Zhou and Howard Bondell and Antoinette Tordesillas and Benjamin I. P. Rubinstein and James Bailey},
+  journal = {Annals of Applied Statistics},
+  note = {To appear},
+}
+</code></pre></div>
+
+<ul>
+<li>Zhou, Shuo, Howard Bondell, Antoinette Tordesillas, Benjamin I. P. Rubinstein and James Bailey. “Early identification of an impending rockslide location via a spatially-aided Gaussian mixture model”. In: <em>Annals of Applied Statistics</em> (2020). To appear. [<a style="cursor: pointer;" onclick="DownloadToFile('Zhou2020early.bib', 'bibtex-Zhou2020early')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-setiawan2020function">
 @inproceedings{setiawan2020function,
   title = {Function Interpolation for Learned Index Structures},
