test-comp accept

--- a/pubs.html
+++ b/pubs.html
@@ -272,6 +272,22 @@ $(document).ready(function () {
 </ul>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-liu2020legion">
+@inproceedings{liu2020legion,
+  title = {Legion: Best-First Concolic Testing},
+  year = {2020},
+  author = {Dongge Liu and Gidon Ernst and Toby Murray and Benjamin I. P. Rubinstein},
+  booktitle = {Proceedinsg of the 23rd International Conference on Fundamental Approaches to Software Engineering},
+  series = {FASE},
+  note = {Test-Comp session, to appear},
+}
+</code></pre></div>
+
+<ul>
+<li>Liu, Dongge, Gidon Ernst, Toby Murray and Benjamin I. P. Rubinstein. “Legion: Best-First Concolic Testing”. In: <em>Proceedinsg of the 23rd International Conference on Fundamental Approaches to Software Engineering</em>. FASE. Test-Comp session, to appear. 2020. [<a href="https://github.com/Alan32Liu/Legion">software</a>; <a style="cursor: pointer;" onclick="DownloadToFile('liu2020legion.bib', 'bibtex-liu2020legion')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-setiawan2020function">
 @inproceedings{setiawan2020function,
   title = {Function Interpolation for Learned Index Structures},
