test-comp arxiv

--- a/pubs.html
+++ b/pubs.html
@@ -284,7 +284,7 @@ $(document).ready(function () {
 </code></pre></div>
 
 <ul>
-<li>Liu, Dongge, Gidon Ernst, Toby Murray and Benjamin I. P. Rubinstein. “Legion: Best-First Concolic Testing”. In: <em>Proceedinsg of the 23rd International Conference on Fundamental Approaches to Software Engineering</em>. FASE. Test-Comp session, to appear. 2020. [<a href="https://github.com/Alan32Liu/Legion">software</a>; <a style="cursor: pointer;" onclick="DownloadToFile('liu2020legion.bib', 'bibtex-liu2020legion')">BibTeX</a>]</li>
+<li>Liu, Dongge, Gidon Ernst, Toby Murray and Benjamin I. P. Rubinstein. “Legion: Best-First Concolic Testing”. In: <em>Proceedinsg of the 23rd International Conference on Fundamental Approaches to Software Engineering</em>. FASE. Test-Comp session, to appear. 2020. [<a href="https://github.com/Alan32Liu/Legion">software</a>; <a href="https://arxiv.org/abs/2002.06311">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('liu2020legion.bib', 'bibtex-liu2020legion')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
