--- a/group.html
+++ b/group.html
@@ -328,6 +328,7 @@ $(document).ready(function () {
 <div id="postdocs" class="section level3">
 <h3>Postdocs</h3>
 <ul>
+<li><a href="https://changxu.io/">Chang Xu</a> (w Cohn 2020– ). Adversarial learning for NLP.</li>
 <li><a href="https://www.linkedin.com/in/andrew-cullen-67b04746/?originalSubdomain=au">Andrew Cullen</a> (w Alpcan 2019– ). Machine learning for spectrum management in contested environments.</li>
 <li><a href="https://cis.unimelb.edu.au/people/prameesha-weerasinghe">Sandamal Weerasinghe</a> (w Leckie, Erfani, Alpcan 2019– ). Adversarial machine learning.</li>
 <li><a href="https://shuozhou.github.io/">Shuo Zhou</a> (w Tordesillas, Bailey, Bondell 2019– ). Complex networks in materials science, cybersecurity.</li>
@@ -336,6 +337,8 @@ $(document).ready(function () {
 <div id="phd-students" class="section level3">
 <h3>PhD students</h3>
 <ul>
+<li><a href="https://www.linkedin.com/in/jun-wang-15065b170/">Jun Wang</a>. (w Trevor Cohn 2020– ). Adversarial learning for NLP.</li>
+<li><a href="https://www.linkedin.com/in/guoxin-sun-338888162/">Guoxin Sun</a>. (w Tansu Alpcan, Seyit Camtepe 2020– ). Distributed adversarial learning.</li>
 <li><a href="https://scholar.google.co.il/citations?user=en8SzLcAAAAJ&amp;hl=en">Roei Gelbhart</a> (2019– ). Robustness in machine learning.</li>
 <li>Ruihan Zhang (w Tim Miller, Kris Ehinger 2019– ). Explainable AI and machine learning.</li>
 <li><a href="http://www.malinga.me/">Malinga Perera</a> (w Renata Borovica-Gajic 2018– ). Self-driving databases.</li>
@@ -347,8 +350,8 @@ $(document).ready(function () {
 <div id="phd-studentscompleted" class="section level3">
 <h3>PhD students—Completed</h3>
 <ul>
-<li><a href="https://au.linkedin.com/in/leyla-roohi-b4544a67">Leyla Roohi</a> (w Vanessa Teague 2017–19). Secure storage and private querying for telecommunications metadata (submitted)</li>
-<li>Yuan Li (w Trevor Cohn 2015–19). Crowd sourcing, Bayesian optimisation, NLP (completed, passed)</li>
+<li><a href="https://au.linkedin.com/in/leyla-roohi-b4544a67">Leyla Roohi</a> (w Vanessa Teague 2017–19). Secure storage and private querying for telecommunications metadata (completed, passed)</li>
+<li>Yuan Li (w Trevor Cohn 2015–19). Crowd sourcing, Bayesian optimisation, NLP → Postdoc at Univ Melbourne</li>
 <li><a href="https://www.researchgate.net/profile/Lingjuan_Lyu">Lingjuan Lyu</a> (w Marimuthu Palaniswami 2016–18). Privacy in distributed sensing → Postdoc at the ANU</li>
 <li><a href="https://sites.google.com/site/safiheidari/">Safiollah Heidari</a> (w Raj Buyya 2015–18). Distributed graph processing → Founder, NeuroPhyte</li>
 <li><a href="https://xunyunliu.github.io/">Xunyun Liu</a> (w Raj Buyya, Rodrigo Calheiros 2015–18). Stream computing → Assistant Prof at NUDT</li>
