--- a/pubs.html
+++ b/pubs.html
@@ -362,6 +362,21 @@ $(document).ready(function () {
 </ul>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-leins2020tracking">
+@article{leins2020tracking,
+  title = {Tracking, tracing, trust: Contemplating mitigating the impact of COVID-19 through technological interventions},
+  year = {2020},
+  author = {Kobi Leins and Chris Culnane and Benjamin I. P. Rubinstein},
+  journal = {Medical Journal of Australia},
+  note = {Preprint},
+}
+</code></pre></div>
+
+<ul>
+<li>Leins, Kobi, Chris Culnane, and Benjamin I. P. Rubinstein. “Tracking, tracing, trust: Contemplating mitigating the impact of COVID-19 through technological interventions”. In: <em>Medical Journal of Australia</em> (2020). Preprint. [<a href="https://www.mja.com.au/journal/2020/tracking-tracing-trust-contemplating-mitigating-impact-covid-19-through-technological">publisher link</a>; <a href="https://www.mja.com.au/system/files/2020-05/Rubenstein%20mja20.00707%20-%207%20May%202020.pdf">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('leins2020tracking.bib', 'bibtex-leins2020tracking')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-liu2020legion">
 @inproceedings{liu2020legion,
   title = {Legion: Best-First Concolic Testing},
@@ -393,6 +408,38 @@ $(document).ready(function () {
 
 <ul>
 <li>Setiawan, Naufal Fikri, Benjamin I. P. Rubinstein, and Renata Borovica-Gajic. “Function Interpolation for Learned Index Structures”. In: <em>Proceedings of the Australasian Computer Science Week Multiconference</em>. ACSW. In the 31st Australasian Database Conference. ACM, 2020 [<a href="https://link.springer.com/book/10.1007/978-3-030-39469-1">publisher link</a>; <span style="color:red">Best Student Paper Honorable Mention</span>; <a style="cursor: pointer;" onclick="DownloadToFile('setiawan2020function.bib', 'bibtex-setiawan2020function')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-roohi2020assessing">
+@inproceedings{roohi2020assessing,
+  title = {Assessing Centrality Without Knowing Connections},
+  year = {2020},
+  author = {Leyla Roohi and Benjamin I. P. Rubinstein and Vanessa Teague},
+  booktitle = {24th Pacific-Asia Conference on Knowledge Discovery and Data Mining},
+  series = {PAKDD},
+  note = {To appear},
+}
+</code></pre></div>
+
+<ul>
+<li>Roohi, Leyla, Benjamin I. P. Rubinstein, and Vanessa Teague. “Assessing Centrality Without Knowing Connections”. In: <em>24th Pacific-Asia Conference on Knowledge Discovery and Data Mining</em>. PAKDD. To appear. 2020 [<a style="cursor: pointer;" onclick="DownloadToFile('roohi2020assessing.bib', 'bibtex-roohi2020assessing')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
+<pre><code id="bibtex-han2020adversarial">
+@inproceedings{han2020adversarial,
+  title = {Adversarial Reinforcement Learning under Partial Observability in Autonomous Computer Network Defence},
+  year = {2020},
+  author = {Yi Han and David Hubczenko and Paul Montague and Olivier {De Vel} and Tamas Abraham and Benjamin I. P. Rubinstein and Christopher Leckie and Tansu Alpcan and Sarah Erfani},
+  booktitle = {2020 International Joint Conference on Neural Networks},
+  series = {IJCNN},
+  note = {To appear},
+}
+</code></pre></div>
+
+<ul>
+<li>Han, Yi, David Hubczenko, Paul Montague, Olivier De Vel, Tamas Abraham, Benjamin I. P. Rubinstein, Christopher Leckie, Tansu Alpcan, and Sarah Erfani. “Adversarial Reinforcement Learning under Partial Observability in Autonomous Computer Network Defence”. In: <em>2020 International Joint Conference on Neural Networks</em>. IJCNN. To appear. 2020 [<a style="cursor: pointer;" onclick="DownloadToFile('han2020adversarial.bib', 'bibtex-han2020adversarial')">BibTeX</a>]</li>
 </ul>
 </div>
 <div id="section-1" class="section level3">
