--- a/pubs.html
+++ b/pubs.html
@@ -399,15 +399,15 @@ $(document).ready(function () {
   title = {Function Interpolation for Learned Index Structures},
   year = {2020},
   author = {Naufal Fikri Setiawan and Benjamin I. P. Rubinstein and Renata Borovica-Gajic},
-  booktitle = {Proceedings of the Australasian Computer Science Week Multiconference},
-  series = {ACSW},
-  publisher = {ACM},
-  note = {In the 31st Australasian Database Conference},
+  booktitle = {Databases Theory and Applications},
+  series = {ADC},
+  note = {31st Australasian Database Conference},
+  pages = {68--80},
 }
 </code></pre></div>
 
 <ul>
-<li>Setiawan, Naufal Fikri, Benjamin I. P. Rubinstein, and Renata Borovica-Gajic. “Function Interpolation for Learned Index Structures”. In: <em>Proceedings of the Australasian Computer Science Week Multiconference</em>. ACSW. In the 31st Australasian Database Conference. ACM, 2020 [<a href="https://link.springer.com/book/10.1007/978-3-030-39469-1">publisher link</a>; <span style="color:red">Best Student Paper Honorable Mention</span>; <a style="cursor: pointer;" onclick="DownloadToFile('setiawan2020function.bib', 'bibtex-setiawan2020function')">BibTeX</a>]</li>
+<li>Setiawan, Naufal Fikri, Benjamin I. P. Rubinstein, and Renata Borovica-Gajic. “Function Interpolation for Learned Index Structures”. In: <em>Databases Theory and Applications</em>. ADC. 31st Australasian Database Conference. 2020, pp. 68-80 [<a href="https://link.springer.com/book/10.1007/978-3-030-39469-1">publisher link</a>; <span style="color:red">Best Student Paper Honorable Mention</span>; <a style="cursor: pointer;" onclick="DownloadToFile('setiawan2020function.bib', 'bibtex-setiawan2020function')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
@@ -418,12 +418,12 @@ $(document).ready(function () {
   author = {Leyla Roohi and Benjamin I. P. Rubinstein and Vanessa Teague},
   booktitle = {24th Pacific-Asia Conference on Knowledge Discovery and Data Mining},
   series = {PAKDD},
-  note = {To appear},
+  pages = {152--163},
 }
 </code></pre></div>
 
 <ul>
-<li>Roohi, Leyla, Benjamin I. P. Rubinstein, and Vanessa Teague. “Assessing Centrality Without Knowing Connections”. In: <em>24th Pacific-Asia Conference on Knowledge Discovery and Data Mining</em>. PAKDD. To appear. 2020 [<a style="cursor: pointer;" onclick="DownloadToFile('roohi2020assessing.bib', 'bibtex-roohi2020assessing')">BibTeX</a>]</li>
+<li>Roohi, Leyla, Benjamin I. P. Rubinstein, and Vanessa Teague. “Assessing Centrality Without Knowing Connections”. In: <em>24th Pacific-Asia Conference on Knowledge Discovery and Data Mining</em>. PAKDD. 2020, pp. 152-163 [<a href="https://arxiv.org/abs/2005.13787">full</a>; <a href="https://doi.org/10.1007/978-3-030-47436-2_12">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('roohi2020assessing.bib', 'bibtex-roohi2020assessing')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
