--- a/pubs.html
+++ b/pubs.html
@@ -377,6 +377,21 @@ $(document).ready(function () {
 </ul>
 
 <div class="bibox" style="display: none;">
+<pre><code id="bibtex-marchant2020a">
+@misc{marchant2020a,
+  title = {A general framework for label-efficient online evaluation with asymptotic guarantees},
+  author = {Neil G. Marchant and Benjamin I. P. Rubinstein},
+  note = {arXiv:TBD [cs.LG]},
+  year = {2020},
+  month = {Jun},
+}
+</code></pre></div>
+
+<ul>
+<li>Marchant, Neil G. and Benjamin I. P. Rubinstein. <em>A general framework for label-efficient online evaluation with asymptotic guarantees</em>. arXiv:TBD [cs.LG]. Jun. 2020 [<a href="https://arxiv.org/">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('marchant2020a.bib', 'bibtex-marchant2020a')">BibTeX</a>]</li>
+</ul>
+
+<div class="bibox" style="display: none;">
 <pre><code id="bibtex-liu2020legion">
 @inproceedings{liu2020legion,
   title = {Legion: Best-First Concolic Testing},
