--- a/pubs.html
+++ b/pubs.html
@@ -381,14 +381,14 @@ $(document).ready(function () {
 @misc{marchant2020a,
   title = {A general framework for label-efficient online evaluation with asymptotic guarantees},
   author = {Neil G. Marchant and Benjamin I. P. Rubinstein},
-  note = {arXiv:TBD [cs.LG]},
+  note = {arXiv:2006.06963 [cs.LG]},
   year = {2020},
   month = {Jun},
 }
 </code></pre></div>
 
 <ul>
-<li>Marchant, Neil G. and Benjamin I. P. Rubinstein. <em>A general framework for label-efficient online evaluation with asymptotic guarantees</em>. arXiv:TBD [cs.LG]. Jun. 2020 [<a href="https://arxiv.org/">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('marchant2020a.bib', 'bibtex-marchant2020a')">BibTeX</a>]</li>
+<li>Marchant, Neil G. and Benjamin I. P. Rubinstein. <em>A general framework for label-efficient online evaluation with asymptotic guarantees</em>. arXiv:2006.06963 [cs.LG]. Jun. 2020 [<a href="https://arxiv.org/abs/2006.06963">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('marchant2020a.bib', 'bibtex-marchant2020a')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
