--- a/pubs.html
+++ b/pubs.html
@@ -368,12 +368,12 @@ $(document).ready(function () {
   year = {2020},
   author = {Kobi Leins and Chris Culnane and Benjamin I. P. Rubinstein},
   journal = {Medical Journal of Australia},
-  note = {Preprint},
+  month = {June},
 }
 </code></pre></div>
 
 <ul>
-<li>Leins, Kobi, Chris Culnane, and Benjamin I. P. Rubinstein. “Tracking, tracing, trust: Contemplating mitigating the impact of COVID-19 through technological interventions”. In: <em>Medical Journal of Australia</em> (2020). Preprint. [<a href="https://www.mja.com.au/journal/2020/tracking-tracing-trust-contemplating-mitigating-impact-covid-19-through-technological">publisher link</a>; <a href="https://www.mja.com.au/system/files/2020-05/Rubenstein%20mja20.00707%20-%207%20May%202020.pdf">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('leins2020tracking.bib', 'bibtex-leins2020tracking')">BibTeX</a>]</li>
+<li>Leins, Kobi, Chris Culnane, and Benjamin I. P. Rubinstein. “Tracking, tracing, trust: Contemplating mitigating the impact of COVID-19 through technological interventions”. In: <em>Medical Journal of Australia</em> (Jun. 2020). [<a href="https://doi.org/10.5694/mja2.50669">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('leins2020tracking.bib', 'bibtex-leins2020tracking')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
