--- a/pubs.html
+++ b/pubs.html
@@ -353,12 +353,14 @@ $(document).ready(function () {
   year = {2020},
   author = {Shuo Zhou and Howard Bondell and Antoinette Tordesillas and Benjamin I. P. Rubinstein and James Bailey},
   journal = {Annals of Applied Statistics},
-  note = {To appear},
+  volume = {14},
+  number = {2},
+  pages = {977-992},
 }
 </code></pre></div>
 
 <ul>
-<li>Zhou, Shuo, Howard Bondell, Antoinette Tordesillas, Benjamin I. P. Rubinstein, and James Bailey. “Early identification of an impending rockslide location via a spatially-aided Gaussian mixture model”. In: <em>Annals of Applied Statistics</em> (2020). To appear. [<a href="https://www.e-publications.org/ims/submission/AOAS/user/submissionFile/42032?confirm=68ff65ed">PDF</a>; <a style="cursor: pointer;" onclick="DownloadToFile('Zhou2020early.bib', 'bibtex-Zhou2020early')">BibTeX</a>]</li>
+<li>Zhou, Shuo, Howard Bondell, Antoinette Tordesillas, Benjamin I. P. Rubinstein, and James Bailey. “Early identification of an impending rockslide location via a spatially-aided Gaussian mixture model”. In: <em>Annals of Applied Statistics</em> 14.2 (2020), pp. 977-992 [<a href="http://dx.doi.org/10.1214/20-AOAS1326">publisher link</a>; <a style="cursor: pointer;" onclick="DownloadToFile('Zhou2020early.bib', 'bibtex-Zhou2020early')">BibTeX</a>]</li>
 </ul>
 
 <div class="bibox" style="display: none;">
